--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,39 +1,50 @@
-# -------------------------
-# Preprints
-# -------------------------
-- title: "Homotopy types of toric orbifolds from Weyl polytopes"
-  authors: "Tao Gong"
-  year: 2024
-  preprint: "2407.16070"
-
-- title: "Toric varieties modulo reflections"
-  authors: "Colin Crowley, Tao Gong, Connor Simpson"
-  year: 2024
-  preprint: "2410.14653"
-
-# -------------------------
-# Notes
-# -------------------------
-- title: "Strict Fundamental Domain for Group Actions"
-  authors: "Tao Gong"
+# === Journal Papers ===
+- title: "On final and peak sizes of an epidemic with latency and effect of behaviour change"
+  authors: "T. Cheng and X. Zou"
   year: 2025
-  note: true
-  file_link: "/assets/papers/strict_fundamental_domain.pdf"
+  journal: "Journal of Mathematical Biology"
+  pdf: "/assets/papers/jmb25.pdf"
+  
+- title: "Recurrent patterns of disease spread post the acute phase of a pandemic: insights from a coupled system of differential equations for disease transmission and a delayed algebraic equation for behavioral adaptation"
+  authors: "T. Cheng and J. Wu"
+  year: 2025
+  journal: "Mathematical Biosciences"
+  pdf: "/assets/papers/mbs25.pdf"
 
-# -------------------------
-# Theses
-# -------------------------
-- title: "Integral Cohomology of Classifying Spaces of Projective Unitary Groups"
-  authors: "Tao Gong"
-  year: 2021
-  type: "thesis"
-  degree: "Master's Thesis"
+- title: "Modelling the impact of society precaution on disease dynamics and its evolution"
+  authors: "T. Cheng and X. Zou"
+  year: 2024
+  journal: "Journal of Mathematical Biology"
+  pdf: "/assets/papers/JMB24.pdf"
 
-- title: "Cohomology of Classifying Spaces of Rank-Two Kac–Moody Groups of Finite Type"
-  authors: "Tao Gong"
-  year: 2018
-  type: "thesis"
-  degree: "Bachelor's Thesis"
+- title: "A new perspective on infection forces with demonstration by a DDE infectious disease model"
+  authors: "T. Cheng and X. Zou"
+  year: 2022
+  journal: "Mathematical Biosciences and Engineering"
+  pdf: "/assets/papers/mbe22-2.pdf"
+
+- title: "Bifurcation Analysis of a Generalized Impulsive Kolmogorov Model With Applications to Pest and Disease Control"
+  authors: "Q. Zhang, B. Tang, T. Cheng and S. Tang"
+  year: 2020
+  journal: "SIAM Journal on Applied Mathematics"
+  pdf: ""
+
+- title: "Threshold Dynamics and Bifurcation of a State Dependent Feedback Nonlinear Control Susceptible Infected Recovered Model"
+  authors: "T. Cheng, S. Tang and R. A. Cheke"
+  year: 2019
+  journal: "Journal of Computational and Nonlinear Dynamics"
+  pdf: ""
+
+- title: "Assessing the epidemiological and economic impact of alternative vaccination strategies: a modelling study"
+  authors: "S. Kim, S. Athar, Y. Li, S. Koumarianos, S. Koumarianos, T. Cheng, … & J. Wu"
+  year: 2022
+  journal: "International Journal of Infectious Diseases"
+  pdf: ""
 
 
- 
+# === Preprints ===
+- title: "Modeling the impact of vaccination strategies dependent on epidemic severity and vaccine efficacy on disease dynamics"
+  authors: "T. Cheng and X. Zou"
+  year: 2023
+  preprint: "preprint"
+  pdf: ""
