Update publications.yml and replace mbs25.pdf

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -15,7 +15,7 @@
   authors: "T. Cheng and X. Zou"
   year: 2024
   journal: "Journal of Mathematical Biology"
-  pdf: "/assets/papers/jmb24.pdf"
+  pdf: "/assets/papers/JMB24.pdf"
 
 
 - title: "A new perspective on infection forces with demonstration by a DDE infectious disease model"
