Fix YAML errors

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -37,7 +37,7 @@
   pdf: "/assets/papers/jcnd19.pdf"
 
 - title: "Assessing the epidemiological and economic impact of alternative vaccination strategies: a modelling study"
-  authors: "S. Kim, S. Athar, Y. Li, S. Koumarianos, S. Koumarianos, T. Cheng, … & J. Wu"
+  authors: "S. Kim, S. Athar, Y. Li, S. Koumarianos, S. Koumarianos, T. Cheng, ... & J. Wu"
   year: 2022
   journal: "International Journal of Infectious Diseases"
  
