--- a/presentations.yml
+++ b/presentations.yml
@@ -1,3 +1,9 @@
+- type: "Invited Talk"
+  event: "Biomath Seminar, Queen’s University"
+  location: "Kingston"
+  date: "Oct 2, 2025"
+
+
 - type: "Minisymposia Talk (Invited)"
   event: "The Third Joint SIAM/CAIMS Annual Meetings (AN25)"
   location: "Montréal, Québec"
